@@ -167,6 +167,11 @@
 	    isabelle.jedit.Document_Model.open_preview(view, true);
 	  </CODE>
 	</ACTION>
+	<ACTION NAME="isabelle-export-browser">
+	  <CODE>
+	    isabelle.jedit.Isabelle_Export.open_browser(view);
+	  </CODE>
+	</ACTION>
 	<ACTION NAME="isabelle.keymap-merge">
 	  <CODE>
 	    isabelle.jedit.Keymap_Merge.check_dialog(view);
